# blinky-esp8266-rust

./: .gitignore  Cargo.toml  README.md  flash-esp.sh
.cargo/: config
src/: main.rs
