[package]
name = "blinky-esp8266-rust"
version = "0.1.0"
authors = ["Coenraad Human <coen.human@gmail.com>"]
edition = "2018"

[dependencies]
xtensa-lx-rt = "0.5.0"
xtensa-lx = "0.3.0"
panic-halt = "0.2.0"
esp8266-hal = { version = "0.4.0", optional = true }
esp8266 = "0.2.0"
embedded-hal = { version = "0.2.4", features = ["unproven"] }

[features]
default = ["xtensa-lx-rt/lx106", "xtensa-lx/lx106", "esp8266-hal"]